--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.6.1",
     "history": "^4.10.1",
+    "moment": "^2.29.1",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
+    "react-date-picker": "^8.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
